compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__double_unary_integer_literal.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 464
expression: "pub fn main() { let _ = --7 }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { let _ = --7 }

----- WARNING
warning: Unnecessary double negation (--) on integer
  ┌─ /src/warning/wrn.gleam:1:25
  │
1 │ pub fn main() { let _ = --7 }
  │                         ^^ You can safely remove this.
