compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__double_unary_integer_variable.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 492
expression: "\n        pub fn main() {\n            let x = 7\n            let _ = --x\n        }\n        "
snapshot_kind: text
---
----- SOURCE CODE

        pub fn main() {
            let x = 7
            let _ = --x
        }
        

----- WARNING
warning: Unnecessary double negation (--) on integer
  ┌─ /src/warning/wrn.gleam:4:21
  │
4 │             let _ = --x
  │                     ^^ You can safely remove this.
