compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__echo_followed_by_panic.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 3155
expression: "\npub fn main() {\n  echo panic\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  echo panic
}


----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:3:3
  │
3 │   echo panic
  │   ^^^^^^^^^^

This `echo` won't print anything because the expression it should be
printing always panics.
