compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__echo_followed_by_panicking_expression.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 3166
expression: "\npub fn main(a) {\n  echo case a {\n    1 -> panic\n    _ -> [1, panic]\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(a) {
  echo case a {
    1 -> panic
    _ -> [1, panic]
  }
}


----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:3:3
  │  
3 │ ╭   echo case a {
4 │ │     1 -> panic
5 │ │     _ -> [1, panic]
6 │ │   }
  │ ╰───^

This `echo` won't print anything because the expression it should be
printing always panics.
