compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__empty_func_warning_test.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 43
expression: "pub fn main() { wibble() }\npub fn wibble() { }\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { wibble() }
pub fn wibble() { }


----- WARNING
warning: Unimplemented function
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ pub fn wibble() { }
  │ ^^^^^^^^^^^^^^^ This code is incomplete

This code will crash if it is run. Be sure to finish it before
running your program.
