compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__empty_guard_clause.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 4429
expression: "\npub fn main() {\n    let wibble = 10\n    case wibble {\n        10 if -> True\n        _ -> False\n    }\n\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
    let wibble = 10
    case wibble {
        10 if -> True
        _ -> False
    }

}

----- WARNING
warning: Deprecated empty guard syntax
  ┌─ test/path:5:12
  │
5 │         10 if -> True
  │            ^^ This can be removed.

This syntax for an empty guard is deprecated. To have a clause without a
guard, remove this.
